--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 				<a href="https://www.linkedin.com/company/flexso/mycompany/" target="_blank"><i
 						class="fab fa-linkedin"></i></a>
 				<a href="https://cai.tools.sap/blog/how-to-build-chatbot-for-sap-analytics-cloud-with-sap-conversational-ai/"
-					target="_blank"><img src="./img/browserlogo.PNG" class="logobelowpage" </i> </a> </div> </div>
+					target="_blank"><img src="https://gasthuysniek.github.io/img/browserlogo.png" class="logobelowpage" </i> </a> </div> </div>
 						</div> <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 					<script>
 						AOS.init();
